# doodles

./: .gitignore  LICENSE.md  pyproject.toml  vimrc
Calcula/: calcula.py
car_lookup/: README.md  car_lookup.py
compare_investment_accouts/: ikz_vs_af.py  output.txt
designer_mindset/abstractions/: README.md  cloud_service.py  sending_emails.py
designer_mindset/cohesion/: README.md  csv_reader.py
designer_mindset/composition/: README.md  vehicle_composition.py  vehicle_composition_exercise.py  video_storage_models.py
designer_mindset/coupling/: README.md  vehicle.py
designer_mindset/exercise_classes/: README.md  class_to_dataclass.py  phones.py
designer_mindset/factory/: README.md  game_enemy_factory.py  game_enemy_functional.py  qr_codes.py
designer_mindset/information_expert/: ordering.py
designer_mindset/inheritance_and_protocols/: README.md  html_trees.py  social_channels.py
designer_mindset/mighty_function/: README.md  classes_or_funcitons_fn.py  classes_or_funcitons_oo.py  pure_functions.py
django_polls/: requirements.txt
exercise_composite/: README.md  exercise_models.py
extract_nuspec_deps/: extract_dependecies.py  interactive_dependencies.html  requirements.txt
food_logger/: README.md  models.py
games/: guess_fret.py
gradient_descent/: gradient_descent.ipynb  requirements.txt
guess_the_fret/: guess_fret.py
workout_cli/: .log_workout.py.swp  exercise_lib.json  log_workout.py  requirements.txt  temp.py  temp_argparse.py
zaptec/: README.md  calculate_cost.py  charge_history.py  get_prices.py  get_token.py  installation_report.py
(+2 files in other folders)
