[tool.poetry]
name = "doodles"
version = "0.1.0"
description = "My doodles"
authors = ["Tord Aronsen <tordaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
